# experiments

./: .gitignore
.github/workflows/: expand-tmpfs.yaml  push-soci.yaml  test-gh-env.yaml  test-ref-trunc.yaml
az-503-repro/: app.py  run.sh  test.py
kuberay-examples/distributed/mulitnode/: .gitignore  .pre-commit-config.yaml  Dockerfile  rayjob.yaml  requirements.txt  train.py
kustomize-playground/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy.py  main.py  pyproject.toml
kustomize-playground/templates/: index.html
lws-example/: qwen2.5-14b-instruct-2xa10.yaml
pytorch-distributed-training/: Dockerfile  README.md  build_and_push.sh  build_with_truefoundry.yaml  kfto-torchrun-trl.yaml  requirements.txt  train.py
service-getting-started/: README.md  app.py  deploy.py
soci-push/: Dockerfile
spark-examples/python/random-df/: Dockerfile  main.py
tfy-dockerbuild-private-pypi/: Dockerfile  README.md  requirements.txt  truefoundry.yaml
